# giraffe

./: .gitignore  CMakeLists.txt  README.md
assets/: atlas.json  atlas.tps  config.ini
scripts/: .luacheckrc  debugger.lua  main.lua  script.as  script.zig  test.lua
src/: angelscript_game.cpp  angelscript_game.h  game.cpp  game.h  game_state_playing.cpp  if_engine.cpp  if_game.cpp  if_game.h  if_glm.cpp  if_math.cpp  if_util.inl  main.cpp  util.h  zig_game.cpp  zig_game.h  zig_includes.h
